--- a/final-angular/src/app/view-question/view-question.component.html
+++ b/final-angular/src/app/view-question/view-question.component.html
@@ -1,19 +1,31 @@
-<div class="mat-elevation-z8 table-section">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <ng-container matColumnDef="index">
-      <th mat-header-cell *matHeaderCellDef>Index</th>
-      <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef>Title</th>
-      <td mat-cell *matCellDef="let element">{{ element.title }}</td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-</div>
+<mat-tab-group [hidden]="questions" class="question-section">
+  <mat-tab
+    *ngFor="let question of questions; let i = index"
+    label="Question {{ i + 1 }}"
+  >
+    <div class="question-display">
+      <h4>Description :</h4>
+      <p>
+        {{ question.description }}
+      </p>
+      <h4>Weightage : {{ question.weightage }} points</h4>
+      <h4>Compilation Time Out : {{ question.compilationTimeout }} ms</h4>
+      <h4>
+        Templates available for
+        <div class="template" *ngFor="let template of question.templates">
+          {{ template.language }}
+        </div>
+      </h4>
+      <h4>Testcase</h4>
+      <div *ngFor="let testcase of question.testcases; let i = index">
+        <h4>Input {{ i + 1 }}</h4>
+        {{ testcase.input }}
+        <h4>Output {{ i + 1 }}</h4>
+        {{ testcase.output }}
+      </div>
+    </div></mat-tab
+  >
+</mat-tab-group>
 <button
   mat-raised-button
   color="primary"
