--- a/final-angular/src/app/view-question/view-question.component.scss
+++ b/final-angular/src/app/view-question/view-question.component.scss
@@ -1,21 +1,27 @@
 @import "../app.component.scss";
 
-.table-section {
-  margin: 25px auto;
-  width: 80%;
-  max-height: 316px;
+.question-section {
+  margin: 0 auto;
+  width: 90%;
+  height: 500px;
   overflow-y: auto;
-  button {
-    width: 130px;
-    margin-right: 20px;
-  }
-  button:hover {
-    color: white;
-    background-color: rgb(23, 23, 158);
-  }
-  th,
-  td {
-    text-align: center;
+  font-size: 18px;
+
+  .question-display {
+    padding: 5px;
+    h4 {
+      font-weight: bold;
+      display: flex;
+      margin: 0 0 3px;
+    }
+    p {
+      text-indent: 5%;
+      text-align: justify;
+    }
+    .template {
+      margin-left: 20px;
+      font-weight: lighter;
+    }
   }
 }
 .button-footer {
