Added Assigning Question to user but display Pending

--- a/final-angular/src/app/view-candidate/view-candidate.component.html
+++ b/final-angular/src/app/view-candidate/view-candidate.component.html
@@ -1,1 +1,8 @@
-<p>view-candidate works!</p>
+<button
+  mat-raised-button
+  color="primary"
+  class="button-footer"
+  routerLink="/assign-candidate"
+>
+  Assign question to Candidate
+</button>
