Added Fix to Question Title

--- a/final-angular/src/app/create-question/create-question.component.html
+++ b/final-angular/src/app/create-question/create-question.component.html
@@ -1,5 +1,12 @@
+
 <section class="form">
   <mat-card>
+    <p>
+      <mat-form-field appearance="fill">
+        <mat-label>Title</mat-label>
+        <input matInput placeholder="Title" [(ngModel)]="title" required />
+      </mat-form-field>
+    </p>
     <p>
       <mat-form-field appearance="fill">
         <mat-label>Description</mat-label>
