--- a/final-angular/src/app/create-question/create-question.component.scss
+++ b/final-angular/src/app/create-question/create-question.component.scss
@@ -59,6 +59,7 @@
       margin-right: 10px;
       font-size: 14px;
       width: 60%;
+      resize: none;
     }
     margin-bottom: 20px;
   }
@@ -74,6 +75,7 @@
       width: 60%;
       font-size: 14px;
       margin-bottom: 10px;
+      resize: none;
     }
   }
 }
