--- a/final-angular/src/app/view-candidate/view-candidate.component.scss
+++ b/final-angular/src/app/view-candidate/view-candidate.component.scss
@@ -6,16 +6,12 @@
   width: 30%;
   text-transform: uppercase;
 }
-mat-card {
+
+.table-container {
   margin: 20px auto;
   width: 98%;
-  box-shadow: 0px 5px 5px -1px rgba(0, 0, 0, 0.2),
-    0px 5px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-}
-.table-container {
   max-height: 400px;
   overflow-x: auto;
-  width: 100%;
 }
 table {
   border-collapse: collapse;
@@ -38,4 +34,20 @@ th {
 
 tbody {
   height: 20px;
+}
+
+.empty-section {
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.view-section {
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
