Added New Column to Question and 2 Questions

--- a/final-angular/src/app/create-question/create-question.component.scss
+++ b/final-angular/src/app/create-question/create-question.component.scss
@@ -55,13 +55,15 @@
     display: flex;
 
     justify-content: space-around;
+    flex-wrap: wrap;
     textarea {
       margin-right: 10px;
+      margin-bottom: 20px;
+
       font-size: 14px;
-      width: 60%;
+      width: 46%;
       resize: none;
     }
-    margin-bottom: 20px;
   }
   .testcase-section {
     width: 98%;
