Added fix to css but download pending

--- a/final-angular/src/app/app.component.html
+++ b/final-angular/src/app/app.component.html
@@ -1,24 +1,8 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <button mat-button (click)="opened = !opened">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <button mat-button routerLink="/">
-      <mat-icon>home</mat-icon>
-    </button>
-  </mat-toolbar-row>
-</mat-toolbar>
-
-<mat-sidenav-container>
-  <mat-sidenav [(opened)]="opened" mode="over">
-    <mat-list>
-      <mat-list-item
-        ><button routerLink="/view-question">Question</button>
-      </mat-list-item>
-      <mat-list-item
-        ><button routerLink="/view-candidate">Candidate</button>
-      </mat-list-item>
-    </mat-list>
-  </mat-sidenav>
-  <mat-sidenav-content> <router-outlet></router-outlet> </mat-sidenav-content>
-</mat-sidenav-container>
+<section class="header">
+  <button mat-button routerLink="/">
+    <mat-icon>home</mat-icon>
+  </button>
+</section>
+<section class="content">
+  <router-outlet></router-outlet>
+</section>
