--- a/final-angular/src/app/create-question/create-question.component.html
+++ b/final-angular/src/app/create-question/create-question.component.html
@@ -109,20 +109,10 @@
       </section>
     </section>
     <div class="button-group">
-      <button
-        mat-raised-button
-        color="primary"
-        class="button-footer"
-        (click)="onSubmit()"
-      >
+      <button mat-raised-button class="button-footer" (click)="onSubmit()">
         Save Question
       </button>
-      <button
-        mat-raised-button
-        color="primary"
-        class="button-footer"
-        routerLink="/view-question"
-      >
+      <button mat-raised-button class="button-footer" routerLink="/">
         Back
       </button>
     </div>
