--- a/final-angular/src/app/question-display/question-display.component.html
+++ b/final-angular/src/app/question-display/question-display.component.html
@@ -8,5 +8,5 @@
   <h4>Type : {{ question.type }}</h4>
   <h4>Weightage : {{ question.weightage }}</h4>
 
-  <button mat-button (click)="onClose()">Close</button>
+  <button mat-raised-button color="primary" (click)="onClose()">Close</button>
 </section>
