--- a/final-angular/src/app/home/home.component.scss
+++ b/final-angular/src/app/home/home.component.scss
@@ -6,7 +6,8 @@
   justify-content: space-around;
   flex-wrap: wrap;
   mat-card {
-    width: 40%;
+    width: 35%;
+    border-radius: 15%;
     margin-top: 20px;
     margin-bottom: 20px;
     height: 200px;
