--- a/final-angular/src/app/view-candidate/view-candidate.component.scss
+++ b/final-angular/src/app/view-candidate/view-candidate.component.scss
@@ -1,10 +1,8 @@
 @import "../app.component.scss";
 
-.button-footer {
-  margin-left: 35%;
-  margin-top: 20px;
-  width: 30%;
-  text-transform: uppercase;
+.view {
+  margin-top: 15px;
+  height: 550px;
 }
 
 .table-container {
@@ -50,4 +48,15 @@ tbody {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.button-group {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  .button-footer {
+    margin-top: 20px;
+    width: 30%;
+    text-transform: uppercase;
+  }
 }
