--- a/final-angular/src/app/view-question/view-question.component.html
+++ b/final-angular/src/app/view-question/view-question.component.html
@@ -21,7 +21,7 @@
           <th>INDEX</th>
           <th>QUESTION TITLE</th>
           <th>Question Type</th>
-          <th>Actions</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
@@ -37,21 +37,10 @@
               <button matTooltip="View" (click)="openDialog(question)">
                 <mat-icon>remove_red_eye</mat-icon>
               </button>
-              <button matTooltip="Download">
-                <mat-icon>cloud_download</mat-icon>
-              </button>
             </div>
           </td>
         </tr>
       </tbody>
     </table>
   </section>
-  <button
-    mat-raised-button
-    color="primary"
-    class="button-footer"
-    routerLink="/"
-  >
-    Back
-  </button>
 </mat-card>
