--- a/final-angular/src/app/view-question/view-question.component.scss
+++ b/final-angular/src/app/view-question/view-question.component.scss
@@ -37,7 +37,7 @@
       border: none;
       border-radius: 5px;
       width: 40px;
-      background-color: blue;
+      background-color: rgb(14, 14, 255);
       color: white;
       cursor: pointer;
       display: flex;
